--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -6,18 +6,23 @@ block content
 
     //- Heading
     div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80 over-scroll rounded-t-3xl")
-        p(class="text-5xl p-10 py-15 mx-10 text-slate-400") Add Category
+        p(class="text-5xl px-10 py-10 mx-10 text-slate-400") Add Category
+        
+        if error
+            ul(class="error-message px-10 mx-10 flex gap-2") 
+                li(class="text-red-600 text-xl") Error
+                li(class="text-red-600 text-xl") Error
 
-        form(class="flex flex-col gap-10 px-20")
+        form(class="flex flex-col gap-10 px-20" method="post" action="/store/category/create")
             div(class="name-container flex flex-col gap-2")
                 label(for="category_name" class="text-black text-4xl") Name *
-                p(class="text-slate-400") 100 characters max
-                input(id="category_name", name="name" type="text" class="w-3/5 p-3 border text-2xl border-gray-400 rounded-2xl text-black focus:border-yellow-500 outline-none")
+                p(class="text-slate-400 text-xl") 100 characters max
+                input(id="category_name", name="name" type="text" class="w-3/5 p-3 border text-2xl border-gray-400 rounded-2xl text-black focus:border-yellow-500 outline-none" minLength="1" maxLength="100" required)
             div(class="description-container flex flex-col gap-2")
                 label(for="category_description" class="text-black text-4xl") Description *
-                p(class="text-slate-400") 100 characters min
-                textarea(id="category_description" name="description", class="w-3/5 p-3 border text-2xl rounded-2xl border-gray-400 text-black focus:border-yellow-500 outline-none" rows="15")
-            button(class="flex bg-yellow-500 justify-center py-3 px-5 w-1/5 gap-3 text-3xl font-bold") 
+                p(class="text-slate-400 text-xl") 100 characters min
+                textarea(id="category_description" name="description", class="w-3/5 p-3 border text-2xl rounded-2xl border-gray-400 text-black focus:border-yellow-500 outline-none" rows="15" minLength="100" required)
+            button(class="flex bg-yellow-500 justify-center py-3 px-5 w-1/5 gap-3 text-3xl font-bold border rounded-2xl") 
                 img(src="/images/mark.png") 
                 p Publish
                 
