--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -13,17 +13,18 @@ block content
                 ul(class="error-message px-10 mx-10 flex gap-2") 
                     li(class="text-red-600 text-xl") #{error.msg}
 
-        form(class="text-slate-500 flex flex-col px-20" method="post")
+        form(class="text-slate-500 flex flex-col px-20" method="post" enctype="multipart/form-data")
             label(for="item_image" class="text-black text-3xl pb-3") Picture 
             div(class="image-upload-container flex justify-between items-center bg-white w-3/5 p-5 mb-7 border border-dashed border-slate-400")
                 img(src='/images/imgicon.png' class="w-12 h-auto")
                 div(class="text-slate-400")
                     p(class="text-3xl") Upload a picture of your item.
                     p(class="text-sm") SVG, JPG, PNG (rec. 700px x 430px)
-                div(class="image-file")
-                    input(type="file" class="hidden" name="item_image" id="file-upload")
-                    div(class="browse-btn cursor-pointer border border-dashed px-5 py-2 border-slate-400 rounded-xl") Browse
-            div(class="item-name-container mb-7")
+                div(class="image-file w-1/4 relative")
+                    input(type="file" class="opacity-0 absolute -top-2/4" name="item_image" id="file-upload" required)
+                    div(class="browse-btn cursor-pointer border border-dashed text-xl text-center px-3 py-2 border-slate-400 rounded-xl") Browse
+            div(class="upload-image-name")
+            div(class="item-name-container mb-10")
                 label(for="item_name" class="text-black text-3xl pb-4") Name *
                 p(class="text-lg text-slate-400 pb-2") 100 characters max 
                 input(type="text" name="item_name" value=(item_detail ? item_detail.name : "") id="item_name" class="border-2 rounded-xl w-3/5 p-2 text-2xl focus:border-yellow-500 outline-none" min="1" max="100" required)
@@ -51,9 +52,13 @@ block content
     script.
         const fileUploadHiddenButton = document.querySelector("#file-upload");
         const browseButton = document.querySelector(".browse-btn");
+        const uploadedImageName = document.querySelector(".upload-image-name");
 
         const callHiddenBrowseButton = ()=> {
             fileUploadHiddenButton.click()
         }
 
         browseButton.addEventListener("click", callHiddenBrowseButton)
+        fileUploadHiddenButton.addEventListener("change", ()=> {
+            uploadedImageName.textContent = fileUploadHiddenButton.value.replace("fakepath", "");
+        })
