--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,8 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
     link(rel='stylesheet', href='/output.css')
   body(class="bg-black text-white")
